fixed white bar on desktop chrome and properly fixed overflow issue on mobile

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 96%;
+  width: 100%;
   height: 100%;
   min-height: 96vh;
   z-index: 1;
@@ -22,7 +22,6 @@
   flex-direction: column;
   background-color: black;
   background-size: 100%;
-  overflow: scroll;
 }
 
 .Anchor {
